@@ -17,7 +17,6 @@
 package com.ubiqube.etsi.mano.vnfm.service.graph;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.github.dexecutor.core.task.ExecutionResult;
 import com.github.dexecutor.core.task.ExecutionResults;
@@ -32,8 +31,8 @@ public class VnfReport implements Report {
 
 	private final ExecutionResults<UnitOfWork<VnfTask, VnfParameters>, String> results;
 
-	public VnfReport(final ExecutionResults<UnitOfWork<VnfTask, VnfParameters>, String> _results) {
-		results = _results;
+	public VnfReport(final ExecutionResults<UnitOfWork<VnfTask, VnfParameters>, String> results) {
+		this.results = results;
 	}
 
 	public List<ExecutionResult<UnitOfWork<VnfTask, VnfParameters>, String>> getSkipped() {
@@ -42,12 +41,12 @@ public class VnfReport implements Report {
 
 	@Override
 	public List<ReportItem> getSuccess() {
-		return results.getSuccess().stream().map(this::map).collect(Collectors.toList());
+		return results.getSuccess().stream().map(this::map).toList();
 	}
 
 	@Override
 	public List<ReportItem> getErrored() {
-		return results.getErrored().stream().map(this::map).collect(Collectors.toList());
+		return results.getErrored().stream().map(this::map).toList();
 	}
 
 	public List<ExecutionResult<UnitOfWork<VnfTask, VnfParameters>, String>> getAll() {
